# patrick

./: .gitignore  README.md  bot.py  discord-py-stubs.nix  flake.nix  markdownify.nix  patrick.nix  r-and-d-discord-bot.nix  setup.cfg
.github/workflows/: make_requirements.py  test.yml
patrick/: __init__.py  bot_wrapper.py
patrick/cogs/: announcements.py  standard_channels.py
patrick/cogs/groups/: __init__.py  self_placement.py
patrick/helper_functions/: __init__.py  channel.py  confirmation.py
r_and_d_discord_bot/: __init__.py  bot_wrapper.py
r_and_d_discord_bot/cogs/: __init__.py  announcements.py  development.py  groups.py  standard_channels.py
r_and_d_discord_bot/cogs/groups/: __init__.py  self_placement.py
r_and_d_discord_bot/helper_functions/: __init__.py  brightspace.py  confirmation.py  ta_role.py
