[metadata]
name = r-and-d-discord-bot
version = 0.0.0
author = "Nathalie Saba, Mike Verwegen, Splinter Suidman and Sybrand Aarnoutse"
author_email = "nathalie.saba@student.ru.nl, mike.verwegen@student.ru.nl, splinter.suidman@student.ru.nl and sybrand.aarnoutse@student.ru.nl"
description = "R&D Project 2020-2021, Discord bot assisting in seminars"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/syberant/r-and-d-discord-bot"
project_urls =
    Bug Tracker = "https://github.com/syberant/r-and-d-discord-bot/issues"
classifiers =
    Programming Language :: Python :: 3
    # TODO: License
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    r_and_d_discord_bot = r_and_d_discord_bot:main

[options]
packages = r_and_d_discord_bot
python_requires = >=3.6
install_requires =
    discord.py >= 1.3.4

[flake8]
per-file-ignores = __init__.py:F401
