[metadata]
name = patrick
version = 0.0.0
author = "Nathalie Saba, Mike Verwegen, Splinter Suidman and Sybrand Aarnoutse"
author_email = "nathalie.saba@student.ru.nl, mike.verwegen@student.ru.nl, splinter.suidman@student.ru.nl and sybrand.aarnoutse@student.ru.nl"
description = "R&D Project 2020-2021, Discord bot assisting in seminars"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/syberant/patrick"
project_urls =
    Bug Tracker = "https://github.com/syberant/patrick/issues"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    patrick = patrick:main

[options]
packages = find:
python_requires = >=3.6
install_requires =
    discord.py >= 1.3.4
    beautifulsoup4 >= 4.9.1
    markdownify >= 0.7.4
    requests >= 2.24.0

[flake8]
per-file-ignores = __init__.py:F401
max-line-length = 120

[pycodestyle]
max-line-length = 120
